# deboa-templates

./: README.md  cargo-generate.toml
.github/workflows/: ci.yml
simple/template/: Cargo.toml  README.md
simple/template/src/: main.rs
