[package]
name = "{{project-name}}"
version = "0.1.0"
description = "{{project-description}}"
authors = ["{{authors}}"]
license = "MIT"
edition = "2024"

[dependencies]
deboa = { version = "0.0.9" }
deboa-extras = { version = "0.0.5", features = ["json"] }
tokio = { version = "1.47.2", features = ["macros", "rt-multi-thread"], default-features = false }
serde = "1.0.219"
serde_json = "1.0.138"
http = "1.4.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
